<resources>
    <string name="app_name">My Food</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello Explore your dream food</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="LogIn">Register</string>
    <string name="Repassword">Re-password</string>
    <string name="Burgers">Burgers</string>
    <string name="Pizzas">Pizzas</string>
    <string name="HotDogs">Hot Dogs</string>
    <string name="FrenchFries">French Fries</string>
    <string name="Sandwiches">Sandwiches</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_profile">My Profile</string>
    <string name="Darshana">Darshana</string>
</resources>